<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Cal">大卡</string>
    <string name="OK">确定</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="app_name">全民健身</string>
    <string name="autostart">自动开始记步</string>
    <string name="avrg_rpm">平均转速(转/分)</string>
    <string name="avrgspeed">平均时速</string>
    <string name="back">返回</string>
    <string name="bbequipment">健身器材</string>
    <string name="bbfootpath">健身步道</string>
    <string name="begintest">开始测试</string>
    <string name="boy">男</string>
    <string name="cancel">取消</string>
    <string name="cha">差</string>
    <string name="ci_nums">次数</string>
    <string name="circle">圈</string>
    <string name="codeerror">验证码错误，请重新输入</string>
    <string name="codenull">验证码不能为空</string>
    <string name="complete_ci">已完成（次）</string>
    <string name="complete_zu">已完成（组）</string>
    <string name="confirm">确定</string>
    <string name="conndevice">连接传感器</string>
    <string name="connect_meg_device">连接行者悟空智能传感器</string>
    <string name="connect_weight_device">连接行者悟空重量传感器</string>
    <string name="connect_xzwk_device">连接行者悟空健身设备传感器</string>
    <string name="connectcharger">"测试前重启蓝牙！
测试时，请将手机连接充电器！
且不要离开本页面！"</string>
    <string name="consume">累计消耗</string>
    <string name="consumer">消耗</string>
    <string name="continues">继续</string>
    <string name="days">天</string>
    <string name="defaultreps">默认次数</string>
    <string name="defaultsets">默认组数</string>
    <string name="defaulttime">00:00:00</string>
    <string name="defaultvalue">--</string>
    <string name="defaultzero">0</string>
    <string name="device">设备</string>
    <string name="device_test">传感器测试</string>
    <string name="deviceparams">参数</string>
    <string name="distance">距离</string>
    <string name="duration">时长</string>
    <string name="end">结束</string>
    <string name="entercode">请输入验证码</string>
    <string name="enterfp">进入步道</string>
    <string name="enterphone">请输入手机号</string>
    <string name="enterpwd">请输入密码</string>
    <string name="exercising">正在锻炼</string>
    <string name="factry_xzwk">行者悟空</string>
    <string name="factry_xzwk_smart">行者悟空智能健身</string>
    <string name="finishrep">已完成(次)</string>
    <string name="finishset">已完成(组)</string>
    <string name="finishset10">已完成(10次/组)</string>
    <string name="finishset15">已完成(15次/组)</string>
    <string name="finishset30">已完成(30次/组)</string>
    <string name="finishtest">结束测试</string>
    <string name="footpath">步道</string>
    <string name="forgetpwd">忘记密码？</string>
    <string name="fou">否</string>
    <string name="fpinfo">步道详情</string>
    <string name="frequency">频率(次/分钟)</string>
    <string name="frequently_used_equipment">常用器械</string>
    <string name="getcode">获取验证码</string>
    <string name="girl">女</string>
    <string name="gosetting">去设置</string>
    <string name="group">组</string>
    <string name="heardw">次/分钟</string>
    <string name="heartrate">请将双手触碰采集点</string>
    <string name="heartrates">获取心率</string>
    <string name="heartratetitle">心率采集</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hiker">全民健身步道</string>
    <string name="hour">小时</string>
    <string name="hr_hands_on">双手已触碰采集点</string>
    <string name="hr_put_hands">请将双手触碰采集点</string>
    <string name="info">信息</string>
    <string name="kcal">大卡</string>
    <string name="keepexercs">（已累计锻炼）</string>
    <string name="keeponexerc">已坚持锻炼</string>
    <string name="km">公里</string>
    <string name="liang">良</string>
    <string name="login">登录</string>
    <string name="loginother">使用社交账号登录</string>
    <string name="loginout">退出登录</string>
    <string name="loginphone">手机登录</string>
    <string name="loginreg">手机注册</string>
    <string name="maxamp">最大幅度(度)</string>
    <string name="meter">米</string>
    <string name="mine">我</string>
    <string name="minute">分钟</string>
    <string name="morefootpath">更多步道</string>
    <string name="morefp">更多步道</string>
    <string name="moveheight">移动高度(米)</string>
    <string name="myinfo">个人信息</string>
    <string name="near_equipment">其他附近器械器械</string>
    <string name="net_no_open">请检查网络是否已打开!</string>
    <string name="new_rt_amp_d">新幅度(度)</string>
    <string name="newfinishrep">新已完成(次)</string>
    <string name="no_required_permission">Permission denied.</string>
    <string name="noins_qq">手机未安装QQ客户端。</string>
    <string name="noins_sina">手机未安装微博客户端。</string>
    <string name="noins_wechat">手机未安装微信客户端。</string>
    <string name="nosdcard">设备无SD卡,无法进行下一步操作</string>
    <string name="not_supported">The device does not have required services.</string>
    <string name="orient_smart_route">澳瑞特智能路径</string>
    <string name="phonecode">手机号与验证码不一致，请确认</string>
    <string name="phonenull">手机号不能为空</string>
    <string name="power">功率</string>
    <string name="pwdhint">密码，6-16位数字或字母</string>
    <string name="pwdnull">密码不能为空</string>
    <string name="rank">排行</string>
    <string name="rate">频率（次/分钟）</string>
    <string name="rate_nums">频率</string>
    <string name="register">注册</string>
    <string name="route">路径</string>
    <string name="route_fp">绕步道</string>
    <string name="rt_amp">实时动作幅度</string>
    <string name="rt_amp1">实时动作幅度 1</string>
    <string name="rt_amp_d">实时幅度(度)</string>
    <string name="rtspeed">实时速度</string>
    <string name="save">保存</string>
    <string name="scanner_action_cancel">取消</string>
    <string name="scanner_action_scan">行者悟空</string>
    <string name="scanner_connected_device">已连接设备：%1$s（电量%2$s）</string>
    <string name="scanner_empty">请将手机按说明放置于智能方寸云台上，以免云台不能正常感应您的手机！</string>
    <string name="scanner_permission_rationale">"Since Android 6.0 Marshmallow system requires granting access to device's location in order to scan for Bluetooth Smart devices. Bluetooth beacons may be used to determine the phone's and user's location."</string>
    <string name="scanner_subtitle_bonded">BONDED DEVICES:</string>
    <string name="scanner_subtitle_not_bonded">将手机置于支架自动连接智能健身器械</string>
    <string name="score_0">0</string>
    <string name="second">秒</string>
    <string name="set_manual_default">设置为默认连接方式</string>
    <string name="setting">设置</string>
    <string name="shi">是</string>
    <string name="signal_conn_test">信号连接测试</string>
    <string name="signal_test">信号测试</string>
    <string name="simrevdistance">模拟距离(公里)</string>
    <string name="simspeed">模拟时速(公里/时)</string>
    <string name="singreport">单项报告</string>
    <string name="smart_route">智能路径</string>
    <string name="speed">速度</string>
    <string name="speeddw">公里/小时</string>
    <string name="step">步</string>
    <string name="submit">提交</string>
    <string name="switch_to_manual">手动选择器械</string>
    <string name="taikong">太空漫步机</string>
    <string name="takephoto">拍照</string>
    <string name="test">测试</string>
    <string name="time">时间</string>
    <string name="time_0">0:0:0</string>
    <string name="timeelapse">耗时</string>
    <string name="todaypath">今日步道</string>
    <string name="todaypathdata">今日数据</string>
    <string name="unknowerror">未知错误~!</string>
    <string name="useraccount">手机号：%1$s</string>
    <string name="useraddress">住址</string>
    <string name="userbrithday">出生日期</string>
    <string name="useremail">email</string>
    <string name="userheight">身高（cm）</string>
    <string name="username">昵称</string>
    <string name="userwidth">体重（kg）</string>
    <string name="validamp">计数幅度(度)</string>
    <string name="versioninfo">有新的版本了，是否更新？</string>
    <string name="weight_kg">重量(千克)</string>
    <string name="weighttesting">重量测试(Kg)：</string>
    <string name="weighttuning">重量调试(Kg)：</string>
    <string name="wrong_device">上报器材识别错误</string>
    <string name="xiangce">相册选取</string>
    <string name="you">优</string>
    <string name="zu_nums">组数</string>
</resources>
