<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/nav_barlayout_act" />
    <RelativeLayout android:padding="@dimen/dp10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp20">
        <com.wukong.main.widgets.CircleImageView android:id="@id/user_img" android:layout_width="@dimen/dp80" android:layout_height="@dimen/dp80" android:layout_marginLeft="@dimen/dp30" android:src="@mipmap/wkdiscon" />
        <EditText android:textSize="@dimen/sp17" android:gravity="center|left" android:id="@id/user_name" android:background="@null" android:padding="@dimen/dp8" android:layout_width="@dimen/dp120" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp20" android:text="11111111" android:hint="@string/username" android:maxLines="1" android:maxLength="11" android:layout_toRightOf="@id/user_img" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/sp17" android:id="@id/user_sex" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/boy" android:layout_toRightOf="@id/user_name" android:layout_centerVertical="true" />
    </RelativeLayout>
    <TextView android:textSize="@dimen/sp17" android:id="@id/user_account" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp40" android:layout_marginTop="@dimen/dp20" android:layout_marginRight="@dimen/dp40" />
    <EditText android:textSize="@dimen/sp17" android:id="@id/user_height" android:background="@null" android:padding="@dimen/dp8" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp40" android:layout_marginTop="@dimen/dp20" android:layout_marginRight="@dimen/dp40" android:hint="@string/userheight" />
    <View android:background="@color/gray_navtv" android:layout_width="fill_parent" android:layout_height="@dimen/dp1" android:layout_marginLeft="@dimen/dp40" android:layout_marginRight="@dimen/dp40" />
    <EditText android:id="@id/user_weight" android:background="@null" android:padding="@dimen/dp8" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp40" android:layout_marginTop="@dimen/dp20" android:layout_marginRight="@dimen/dp40" android:hint="@string/userwidth" />
    <View android:background="@color/gray_navtv" android:layout_width="fill_parent" android:layout_height="@dimen/dp1" android:layout_marginLeft="@dimen/dp40" android:layout_marginRight="@dimen/dp40" />
    <EditText android:id="@id/user_birth" android:background="@null" android:padding="@dimen/dp8" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp40" android:layout_marginTop="@dimen/dp20" android:layout_marginRight="@dimen/dp40" android:hint="@string/userbrithday" />
    <View android:background="@color/gray_navtv" android:layout_width="fill_parent" android:layout_height="@dimen/dp1" android:layout_marginLeft="@dimen/dp40" android:layout_marginRight="@dimen/dp40" />
    <EditText android:id="@id/user_email" android:background="@null" android:padding="@dimen/dp8" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp40" android:layout_marginTop="@dimen/dp20" android:layout_marginRight="@dimen/dp40" android:hint="@string/useremail" />
    <View android:background="@color/gray_navtv" android:layout_width="fill_parent" android:layout_height="@dimen/dp1" android:layout_marginLeft="@dimen/dp40" android:layout_marginRight="@dimen/dp40" />
    <EditText android:id="@id/user_address" android:background="@null" android:padding="@dimen/dp8" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp40" android:layout_marginTop="@dimen/dp20" android:layout_marginRight="@dimen/dp40" android:hint="@string/useraddress" />
    <View android:background="@color/gray_navtv" android:layout_width="fill_parent" android:layout_height="@dimen/dp1" android:layout_marginLeft="@dimen/dp40" android:layout_marginRight="@dimen/dp40" />
</LinearLayout>